<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="drawer_layout_open">drawer layout open</string>
    <string name="drawer_layout_close">drawer layout close</string>
    <string name="details_layout_media_text_view">Media</string>
    <string name="details_layout_description_text_view">Description</string>
    <string name="List_of_properties">List of properties</string>
    <string name="map">Map</string>

    <string name="property_description_tv">Description :</string>
    <string name="property_type_tv">Type :</string>
    <string name="property_price_tv">Price ($):</string>
    <string name="property_surface_tv">Surface (m2) :</string>
    <string name="property_number_of_room_tv">Number of room</string>
    <string name="channel_name">RealEstateManagerChanel</string>
    <string name="channel_description">Channel to received notification for realEstateManager Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
